# EscModKey

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  EscModKey_interception.cpp  Makefile  README.md  interception.h  utils.cpp
components/libraries/interception/: CMakeLists.txt
components/libraries/interception/inc/: interception.h
components/toolchain/cmake/: mingw_gcc.cmake
projects/EscModKey/: CMakeLists.txt  build.bat  build.sh  readme.md
projects/EscModKey/src/: EscModKey_interception.cpp
src/: CMakeLists.txt  EscModKey_interception.cpp
